test(Permission-ServiceIT) : add test for permission service